# vte

./: BIDI-STATUS  README.md  configure.ac  meson.build
doc/: bidi.txt
glade/: meson.build
po/: POTFILES.in  POTFILES.skip
src/: Makefile.am  bidi.cc  bidi.hh  modes-private.hh  ring.cc  ring.hh  vte.cc  vtedraw.cc  vtegtk.cc  vteinternal.hh  vterowdata.cc  vterowdata.hh  vteseq.cc  vteunistr.cc
src/vte/: vteterminal.h
